users: fix text wrapping

--- a/frontend/src/components/pages/UserPage.css
+++ b/frontend/src/components/pages/UserPage.css
@@ -22,7 +22,6 @@
 }
 .UserPage--sidebar {
   grid-area: sidebar;
-  white-space: nowrap;
 }
 .UserPage--main {
   width: 100%;
